<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".UserProfile">

    <TextView
        android:id="@+id/user"
        android:layout_width="181dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:text="@string/charlie"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sL" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="181dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:text="@string/usrN"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sL" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="368dp"
        android:layout_height="44dp"
        android:text="@string/long_click_to_remove_preference"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtaPref"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="181dp"
        android:layout_height="40dp"
        android:layout_marginTop="124dp"
        android:text="@string/psWrd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sL" />

    <TextView
        android:id="@+id/pass"
        android:layout_width="181dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/cmizer676"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <ListView
        android:id="@+id/dtaPref"
        android:layout_width="393dp"
        android:layout_height="256dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sL" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sL"
        android:layout_width="106dp"
        android:layout_height="106dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:id="@+id/myCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/roundedimag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>